# toposcope

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
src/toposcope/: __init__.py  cli.py  model.py
src/toposcope/collect/: __init__.py  linux.py
viewer/: index.html
