[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toposcope"
version = "0.1.0"
description = "TopoScope: Visual topology mapper for Linux hardware (lspci/lshw meets diagramming)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Victor Gregorio" }]
license = { text = "Proprietary; All Rights Reserved" }
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
toposcope = "toposcope.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
